# approximate-knn

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeTemplate.txt  MANIFEST.in  README.md  RUNME.py  build.py  buildProject.py  clean.py  requirements.txt  setup.py
index/: CMakeLists.txt  CMakeTemplate.txt  bindings.cpp
index/apps/: Dataset.py  checkBindings.py  checkDataset.cpp  checkDataset.py  generateDatasets.py  recallTable.cpp  recallTable.py  run.cpp
index/apps/helpers/: RecallTable.py
index/apps/tools/: RecallTable.py
index/bindings/: MANIFEST.in  bindings.cpp  pyproject.toml  setup.py
index/chm/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Connections.hpp  Dataset.cpp  Dataset.hpp  DistanceFunction.cpp  DistanceFunction.hpp  DistanceInfo.cpp  DistanceInfo.hpp  Heap.hpp  HeapPair.cpp  HeapPair.hpp  Index.cpp  Index.hpp  IndexTemplate.cpp  IndexTemplate.hpp  KnnResults.cpp  KnnResults.hpp  LevelGenerator.cpp  LevelGenerator.hpp  Neighbors.cpp  Neighbors.hpp  Node.hpp  RecallTable.cpp  RecallTable.hpp  Space.cpp  Space.hpp  VisitedSet.cpp  VisitedSet.hpp  enhancedInstructionSet.hpp  euclideanDistance.hpp  innerProduct.hpp  recall.cpp  recall.hpp  types.hpp
index/chm/bindings/: bindings.cpp
index/chm_tools/: Dataset.cpp  Dataset.hpp  RecallTable.cpp  RecallTable.hpp
index/docs/: Doxyfile
index/docs/html/: _configuration_8cpp.html  _configuration_8hpp.html  _configuration_8hpp_source.html  _connections_8cpp.html  _connections_8hpp.html  _connections_8hpp_source.html  _distance_function_8cpp.html  _distance_function_8cpp.js  _distance_function_8hpp.html  _distance_function_8hpp.js  _distance_function_8hpp_source.html  _heap_8hpp.html  _heap_8hpp.js  _heap_8hpp_source.html  _heap_pair_8cpp.html  _heap_pair_8hpp.html  _heap_pair_8hpp_source.html  _index_8hpp.html  _index_8hpp_source.html  _index_template_8cpp.html  _index_template_8cpp.js  _index_template_8hpp.html  _index_template_8hpp_source.html  _knn_results_8cpp.html  _knn_results_8hpp.html  _knn_results_8hpp.js  _knn_results_8hpp_source.html  _level_generator_8cpp.html  _level_generator_8hpp.html  _level_generator_8hpp_source.html  _neighbors_8cpp.html  _neighbors_8hpp.html  _neighbors_8hpp_source.html  _node_8cpp.html  _node_8hpp.html  _node_8hpp_source.html  _space_8cpp.html  _space_8hpp.html  _space_8hpp_source.html  _visited_set_8cpp.html  (+49 more)
index/docs/html/search/: all_11.js  all_13.html  all_14.html  all_15.html  all_16.html  all_17.html  all_18.html  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  classes_0.js  classes_6.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_2.html  enumvalues_3.html  enumvalues_3.js  enumvalues_5.html  enumvalues_6.html  files_5.js  files_6.js  files_8.html  files_9.html  functions_10.js  functions_11.html  functions_12.html  functions_13.js  functions_14.html  functions_2.js  functions_3.js  functions_4.js  (+26 more)
(+502 files in other folders)
